Fix overflow scrolling on options modal (#3674)

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -214,6 +214,7 @@
   padding-right: 4.4rem;
   display: flex;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: var(--modal-padding);
   height: 100%;
 }
